tests/ui/missing_field1.rs
// Copyright 2020 Oxide Computer Company

use testlib::annotation;

#[annotation {
    string = "hey"
}]
fn test() {}

fn main() {}
